--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -3394,7 +3394,7 @@ method, Equalizer implements the correct approach using asymmetric frusta.
 In immersive visualization, the observer is tracked in and the view
 frusta are adapted to the viewer's position and orientation, as shown
 in \fig{fTracked}. The transformation $origin \rightarrow viewer$ is set by
-the application using \textsf{Config::setHead\-Matrix}, which is used by
+the application using \textsf{Observer::setHead\-Matrix}, which is used by
 the server to compute the eye positions, and consequently the view frusta.
 
 \begin{figure}[h!t]\center
