Add RTNeuron picture to front page

--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -94,20 +94,16 @@ this Programming and User Guide, please contact
 \subsection*{Front and Back Page}
 
 The images on the front page show the following applications build using
-Equalizer: 
-RTT DeltaGen\footnote{Image copyright Realtime Technology AG, 2008} [top
-right], 
-\textsf{Bino}, a stereo-capable, multi-display video player\footnote{\link{http://bino.nongnu.org/}}
-[middle center],
-a flow visualization application for climate research\footnote{Image
-  courtesy of Computer Graphics and Multimedia Systems, University of
-  Siegen} [middle right],
-the \textsf{eqPly} polygonal renderer in a three-sided CAVE [bottom
-left],
-the \textsf{eVolve} volume renderer\footnote{Data set courtesy of
-  General Electric, USA} [bottom center],
-and the \textsf{eqNBody} gravitational n-body simulation, based on the
-N-Body CUDA example [bottom right].
+Equalizer: RTT DeltaGen\footnote{Image copyright Realtime Technology AG, 2008}
+[top right], \textsf{Bino}, a stereo-capable, multi-display video
+player\footnote{\link{http://bino.nongnu.org/}} [middle center], a flow
+visualization application for climate research\footnote{Image courtesy of
+  Computer Graphics and Multimedia Systems, University of Siegen} [middle
+  right], the \textsf{eqPly} polygonal renderer in a three-sided CAVE [bottom
+  left], the \textsf{eVolve} volume renderer\footnote{Data set courtesy of
+  General Electric, USA} [bottom center], and the
+\textsf{RTNeuron}\footnote{\link{http://bluebrain.epfl.ch/}} application to
+  visualize cortical circuit simulations [bottom right].
 
 The images on the back page show the following scalable rendering modes:
 Subpixel (FSAA) [top left], DPlex [middle left], Pixel [middle center],
